// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputBox component renders with given numbers prop 1`] = `
<View
  style={
    Object {
      "borderColor": "rgb(150,150,150)",
      "borderRadius": 10,
      "borderWidth": 1,
      "height": 35,
      "justifyContent": "center",
      "marginVertical": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgb(0,0,0)",
        "fontSize": 16,
      }
    }
  >
    12864
  </Text>
</View>
`;

exports[`InputBox component renders without numbers prop 1`] = `
<View
  style={
    Object {
      "borderColor": "rgb(150,150,150)",
      "borderRadius": 10,
      "borderWidth": 1,
      "height": 35,
      "justifyContent": "center",
      "marginVertical": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgb(0,0,0)",
        "fontSize": 16,
      }
    }
  >
    
  </Text>
</View>
`;
